<resources>
    <string name="app_name">Geduco</string>
    <string name="server_client_id_debug">877594372056-aegs95db4kk73knee04esc80phfn3lbp.apps.googleusercontent.com</string>
    <string name="server_client_id_produccion">362769569855-et1d0fucmaneh2urgfggho49migpbss6.apps.googleusercontent.com</string>
    <string name="search">Buscar</string>
    <string name="content_description_search">buscar…</string>
    <string name="content_description_more">mas opciones</string>
    <string name="more">Mas</string>
    <string name="btnJornada">Boton Jornada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_label">Buscar</string>
    <string name="workingDays">Jornadas</string>
    <string name="charging">Cargando..</string>
    <string name="mensajeSinPermiso">Sin permiso para la camara. Este permiso es necesario para poder usar el lector QR</string>
    <string name="icon_date">Fecha</string>
    <string name="titulo">CURSOS Y EVENTOS DE EDUCACIÓN CONTINUA UFPS</string>
    <string name="btn_google">Iniciar Sesión</string>
    <string name="checking">Verificando…</string>
    <string name="tituloCursos">LISTA DE EVENTOS Y CURSOS DISPONIBLES</string>
    <string name="logo_app">Logo App</string>
    <string name="dise_o_top">diseño top</string>
    <string name="dise_o_bot">diseño bot</string>
    <string name="logo_ufps">Logo Ufps</string>
    <string name="nombre">"Nombre: "</string>
    <string name="tipo_de_participante">"Tipo de Participante: "</string>
    <string name="documento">"Documento: "</string>
    <string name="datos_del_paticipante">Datos del paticipante</string>
    <string name="accept">Aceptar</string>
    <string name="sin_cursos">No tiene asignados cursos y/o eventos de educación continua \'en desarrollo\' para la toma de asistencia.</string>
    <string name="btn_floating">Floating action button</string>
    <string name="cancel">Cancelar</string>
</resources>