<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/linear1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="2dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Asistencia Registrada"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            app:cardCornerRadius="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="2dp"
                                android:fontFamily="@font/antic_slab"
                                android:shadowColor="@color/colorWhite"
                                android:text="@string/datos_del_paticipante"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="#FFFFFF"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </com.google.android.material.card.MaterialCardView>


                    </LinearLayout>

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animation_view"
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:layout_toEndOf="@+id/linear1"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/checkbox" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text1Modal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre" />

                    <TextView
                        android:id="@+id/textViewNombreModal"
                        style="@style/text2Modal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nombre de la persona" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text1Modal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/documento" />

                    <TextView
                        android:id="@+id/textViewDocumentoModal"
                        style="@style/text2Modal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Documento de la persona" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text1Modal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_de_participante" />

                    <TextView
                        android:id="@+id/textViewTipoModal"
                        style="@style/text2Modal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tipo de Participante" />
                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnModalExito"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="34dp"
                    android:text="@string/aceptar" />

            </RelativeLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.appcompat.widget.LinearLayoutCompat>