<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".HomeActivity">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="100dp">
                <!-- Contenido scrollable   -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardTextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/borde_color_primary"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:background="@drawable/background_titulo_color_primary"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:padding="5dp"
                                android:radius="5dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/aclonica"
                                    android:text="@string/tituloCursos"
                                    android:textAlignment="center"
                                    android:textAllCaps="true"
                                    android:textColor="#fff"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:id="@+id/textViewNombre"
                                style="@style/text2Modal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:id="@+id/textViewTipo"
                                style="@style/text1Modal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewCurso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/textViewSinCursos"
                        style="@style/text1Modal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="30dp"
                        android:gravity="center"
                        android:text="@string/sin_cursos"
                        android:textAlignment="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:visibility="gone" />


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/colorPrimary"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="5dp"
            app:hideOnScroll="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_floating"
            app:backgroundTint="@color/colorBtnFloating"
            app:layout_anchor="@id/bottomAppBar"
            app:rippleColor="@color/colorPrimary"
            app:srcCompat="@drawable/ic_baseline_power_settings_new_24_white" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>